# linked

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  openapi.json  package-lock.json
.github/workflows/: api-checks.yml  commit-lint.yml  docker.yml  test.yml  web-checks.yml
api/: .dockerignore  .env.example  Dockerfile  Makefile  config.example.yaml  crontab  entrypoint.sh  pyproject.toml  supervisord.conf
api/migrations/: 20260108000311_initial_database_setup.py  20260108183524_add_map_soft_delete.py  20260117120000_add_esi_route_cache.py  20260119120000_add_celestial_tables.py  20260119140000_add_notes_table.py  20260119205640_add_instance_acl.py  20260122014926_add_default_subscriptions.py  20260126211611_add_scope_groups.py  20260127120000_add_ship_type_table.py  20260127140000_add_npc_station_name.py  20260127150000_add_search_scope.py
api/src/api/: app.py  main.py
api/src/api/auth/: __init__.py  guards.py  middleware.py  routes.py
api/src/api/di/: __init__.py  channels.py  settings.py  sqlspec.py  valkey.py
api/src/api/handlers/: __init__.py  exceptions.py
api/src/api/middleware/: __init__.py  auth.py  compression.py  cors.py  csrf.py  logging.py  session.py
api/src/cli/: collect.py  cron.py  keygen.py  main.py  migrate.py  preseed.py  schema.py
api/src/config/: loader.py  settings.py
api/src/database/: __init__.py  enums.py
api/src/database/models/: __init__.py  alliance.py  character.py  constellation.py  corporation.py  default_subscription.py  effect.py  esi_route_cache.py  instance_acl.py  instance_admin.py  instance_settings.py  link.py  map.py  map_alliance.py  map_character.py  map_corporation.py  map_subscription.py  map_user.py  node.py  note.py  refresh_token.py  region.py  signature.py  system.py  system_static.py  user.py  wormhole.py
api/src/esi_client/: __init__.py  client.py  exceptions.py
api/src/esi_client/models/: __init__.py  entities.py  location.py  search.py  status.py  universe.py
api/src/routes/: __init__.py
api/src/routes/admin/: __init__.py  controller.py  dependencies.py
api/src/routes/auth/: __init__.py  controller.py  dependencies.py  service.py
api/src/routes/health/: __init__.py  controller.py
api/src/routes/maps/: __init__.py  controller.py  dependencies.py  event_queue.py  events.py  publisher.py  queries.py  service.py  valkey_deps.py
api/src/routes/reference/: __init__.py  controller.py  dependencies.py  service.py
api/src/routes/routing/: __init__.py  controller.py  dependencies.py  service.py
api/src/routes/status/: __init__.py  controller.py
api/src/routes/universe/: __init__.py  controller.py  dependencies.py  queries.py  service.py
api/src/routes/users/: __init__.py  controller.py  dependencies.py  service.py
api/src/routes/users/location/: __init__.py  dependencies.py  queries.py  service.py
api/src/services/: __init__.py  cleanup.py  encryption.py  eve_sso.py  image_cache.py  instance_acl.py  lifecycle.py  route_base.py  route_cache.py  route_calculator.py
api/src/utils/: class_mapping.py  datetime.py  effects.py  enums.py  valkey.py  wormhole_status.py
api/static/: .gitignore  regions.yaml
api/static/preseed/: constellations.yaml  effects.yaml  wormhole_info.yaml  wormhole_spawns.yaml  wormhole_systems.yaml  wormholes.yaml
api/static/preseed/curated/: wormhole_systems.yaml
api/static/preseed/sde/: mapConstellations.yaml  mapRegions.yaml
api/tests/: config.test.yaml  conftest.py  docker-compose.yml  test_auth.py
api/tests/factories/: app.py  routes.py  static_data.py  user_data.py
api/tests/fixtures/: esi_mock.py  events.py  mock_esi_client.py  mock_sso.py  preseed.py
api/tests/integration/: __init__.py  conftest.py  test_00_authentication.py  test_01_map_creation.py  test_01_maps.py  test_02_nodes.py  test_02_system_search.py  test_03_links.py  test_03_node_creation.py  test_04_link_creation.py  test_04_signatures.py  test_05_node_updates.py  test_05_routes.py  test_06_link_updates.py  test_06_universe.py  test_07_lifecycle.py  test_07_notes.py  test_08_admin.py  test_08_soft_delete.py  test_09_cleanup.py  test_09_reference.py  test_10_status.py  test_11_users.py
web/: .dockerignore  Dockerfile  package-lock.json  package.json  supervisord.conf  tsconfig.json
(+72 files in other folders)
