[project]
name = "linked-eve"
version = "0.1.0"
description = "An EVE Wormhole Connectivity tracker"
readme = "../README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncclick>=8.3.0.7",
    "httpx>=0.28.1",
    "litestar[standard,brotli]>=2.19.0",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0",
    "sqlspec[asyncpg,msgspec,litestar]>=0.34.0",
]

[project.scripts]
linked = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli", "src/config", "src/database", "src/api", "src/esi_client"]
