[project]
name = "linked-eve"
version = "0.1.2"
description = "An EVE Wormhole Connectivity tracker"
requires-python = ">=3.14"
dependencies = [
    "asyncclick>=8.3.0.7",
    "cryptography>=45.0.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "litestar[standard,brotli,valkey]>=2.19.0",
    "PyJWT>=2.10.0",
    "pyyaml>=6.0",
    "sqlspec[asyncpg,msgspec,litestar]>=0.38.0",
]

[project.scripts]
linked = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli", "src/config", "src/database", "src/api", "src/esi_client", "src/services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:EVE client secret is not set:UserWarning:config.settings",
    "ignore:EVE client ID is not set:UserWarning:config.settings",
    "ignore:Token encryption key is not set:UserWarning:config.settings",
    "ignore:CSRF secret is not set:UserWarning:config.settings",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".idea",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4
target-version = "py314"

[tool.ruff.lint]

select = ["E", "F", "W", "C", "I", "N", "A", "COM", "C4", "INP", "Q", "RET", "SIM", "ARG", "PLW", "UP", "ANN", "TID", "FA102"]
ignore = ["COM812", "A005", "ANN401"]
fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I002"]
"migrations/*.py" = ["INP001", "ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"


[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"
exclude = ["test/*"]

[dependency-groups]
dev = [
    "basedpyright>=1.37.0",
    "respx>=0.22.0",
    "ruff>=0.14.13",
    "ty>=0.0.10",
]
test = [
    "polyfactory>=3.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-docker>=3.2.5",
    "pytest-order>=1.3.0",
]
